--- a/app/index.html
+++ b/app/index.html
@@ -37,6 +37,7 @@
         </div>
         <div class="row" ng-controller="ChatboxController">
             <h3>Chatbox</h3>
+            test
         </div>
     </div>
 </body>
