--- a/public/app/index.html
+++ b/public/app/index.html
@@ -2,11 +2,30 @@
 <html ng-app="app">
 <head>
     <title>Connect four</title>
+    <meta charset="UTF-8">
+
     <link rel="stylesheet" href="styles/vendor/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="styles/vendor/bootstrap/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="styles/game.css">
+    <link rel="stylesheet" href="styles/chatbox.css">
+</head>
+<body>
+    <div class="container">
+        <div class="row">
+            <div ng-include="'views/menu.html'"></div>
+        </div>
+        <div class="row" ng-controller="IndexController">
+            <div class="col-md-8" ng-view></div>
+            <div class="col-md-4" ng-controller="LeaderBoardController">
+                <div ng-include="'views/leaderboard.html'"></div>
+            </div>
+        </div>
+        <div class="row">
+            <div ng-include="'views/chatbox.html'"></div>
+        </div>
+    </div>
 
-
+    <script src="scripts/vendor/socketio/socket.io.js"></script>
     <script src="scripts/vendor/jquery/jquery-2.1.4.min.js"></script>
     <script src="scripts/vendor/bootstrap/bootstrap.js"></script>
     <script src="scripts/vendor/angular/angular.min.js"></script>
@@ -23,22 +42,5 @@
     <script src="scripts/controllers/WatchController.js"></script>
 
     <script src="scripts/services/GameService.js"></script>
-</head>
-<body>
-    <div class="container">
-        <div class="row">
-            <div ng-include="'views/menu.html'"></div>
-        </div>
-        <div class="row" ng-controller="IndexController">
-            <div class="col-md-8" ng-view></div>
-            <div class="col-md-4" ng-controller="LeaderBoardController">
-                <div ng-include="'views/leaderboard.html'"></div>
-            </div>
-        </div>
-        <div class="row" ng-controller="ChatboxController">
-            <h3>Chatbox</h3>
-            test
-        </div>
-    </div>
 </body>
 </html>
