--- a/public/app/index.html
+++ b/public/app/index.html
@@ -16,7 +16,7 @@
         </div>
         <div class="row" ng-controller="IndexController">
             <div class="col-md-8" ng-view></div>
-            <div class="col-md-4" ng-controller="LeaderBoardController">
+            <div class="col-md-4">
                 <div ng-include="'views/leaderboard.html'"></div>
             </div>
         </div>
@@ -32,6 +32,10 @@
     <script src="scripts/vendor/angular/angular-route.min.js"></script>
     <script src="scripts/vendor/angular/ui-bootstrap-tpls-0.13.3.min.js"></script>
     <script src="scripts/app.js"></script>
+
+    <script src="scripts/services/GameService.js"></script>
+    <script src="scripts/services/LeaderBoardService.js"></script>
+
     <script src="scripts/controllers/IndexController.js"></script>
     <script src="scripts/controllers/ChatboxController.js"></script>
     <script src="scripts/controllers/LeaderBoardController.js"></script>
@@ -40,7 +44,5 @@
     <script src="scripts/controllers/NewGameController.js"></script>
     <script src="scripts/controllers/GameController.js"></script>
     <script src="scripts/controllers/WatchController.js"></script>
-
-    <script src="scripts/services/GameService.js"></script>
 </body>
 </html>
