--- a/public/app/index.html
+++ b/public/app/index.html
@@ -16,7 +16,7 @@
         </div>
         <div class="row" ng-controller="IndexController">
             <div class="col-md-8" ng-view></div>
-            <div class="col-md-4" ng-controller="LeaderBoardController">
+            <div class="col-md-4">
                 <div ng-include="'views/leaderboard.html'"></div>
             </div>
         </div>
