--- a/public/app/index.html
+++ b/public/app/index.html
@@ -27,6 +27,7 @@
 
     <script src="scripts/vendor/socketio/socket.io.js"></script>
     <script src="scripts/vendor/jquery/jquery-2.1.4.min.js"></script>
+    <script src="http://cdn.jsdelivr.net/sockjs/1.0.1/sockjs.min.js"></script>
     <script src="scripts/vendor/bootstrap/bootstrap.js"></script>
     <script src="scripts/vendor/angular/angular.min.js"></script>
     <script src="scripts/vendor/angular/angular-route.min.js"></script>
