Websocket leaderboard && reconfigure main model for players

--- a/public/app/index.html
+++ b/public/app/index.html
@@ -31,12 +31,16 @@
     <script src="scripts/vendor/angular/angular.min.js"></script>
     <script src="scripts/vendor/angular/angular-route.min.js"></script>
     <script src="scripts/vendor/angular/ui-bootstrap-tpls-0.13.3.min.js"></script>
+    <script src="scripts/vendor/sockjs/socks-0.3.4.js"></script>
+    <script src="scripts/vendor/stompjs/stomp.js"></script>
     <script src="scripts/app.js"></script>
-    <script src="scripts/controllers/NavigationController.js"></script>
+
+    <script src="scripts/models/Player.js"></script>
 
     <script src="scripts/services/GameService.js"></script>
-    <script src="scripts/services/LeaderBoardService.js"></script>
+    <script src="scripts/services/UserService.js"></script>
 
+    <script src="scripts/controllers/NavigationController.js"></script>
     <script src="scripts/controllers/IndexController.js"></script>
     <script src="scripts/controllers/ChatboxController.js"></script>
     <script src="scripts/controllers/LeaderBoardController.js"></script>
