--- a/public/app/index.html
+++ b/public/app/index.html
@@ -17,7 +17,7 @@
         <div class="row" ng-controller="IndexController">
             <div class="col-md-8" ng-view></div>
             <div class="col-md-4">
-                <div ng-include="'views/leaderboard.html'"></div>
+                <div  ng-controller="LeaderBoardController" ng-include="'views/leaderboard.html'"></div>
             </div>
         </div>
         <div class="row">
