Changed lobby stuff

--- a/public/app/index.html
+++ b/public/app/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles/vendor/bootstrap/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="styles/game.css">
     <link rel="stylesheet" href="styles/chatbox.css">
+    <link rel="stylesheet" href="styles/lobbyGame.css">
 </head>
 <body>
     <div class="container">
@@ -37,8 +38,9 @@
     <script src="scripts/app.js"></script>
 
     <script src="scripts/models/Player.js"></script>
+    <script src="scripts/models/Game.js"></script>
 
-    <script src="scripts/services/GameService.js"></script>
+    <script src="scripts/services/LobbyService.js"></script>
     <script src="scripts/services/UserService.js"></script>
 
     <script src="scripts/controllers/NavigationController.js"></script>
