--- a/public/app/index.html
+++ b/public/app/index.html
@@ -42,6 +42,7 @@
 
     <script src="scripts/services/LobbyService.js"></script>
     <script src="scripts/services/UserService.js"></script>
+    <script src="scripts/services/ConnectedUsersService.js"></script>
 
     <script src="scripts/controllers/NavigationController.js"></script>
     <script src="scripts/controllers/IndexController.js"></script>
@@ -52,5 +53,8 @@
     <script src="scripts/controllers/NewGameController.js"></script>
     <script src="scripts/controllers/GameController.js"></script>
     <script src="scripts/controllers/WatchController.js"></script>
+
+    <script src="scripts/logout.js"></script>
+
 </body>
 </html>
