added latest games stuff. Should be indifferent branch but i was lazy

--- a/public/app/index.html
+++ b/public/app/index.html
@@ -34,10 +34,12 @@
 
     <script src="scripts/models/Player.js"></script>
     <script src="scripts/models/Game.js"></script>
+    <script src="scripts/models/PlayedGame.js"></script>
 
     <script src="scripts/services/LobbyService.js"></script>
     <script src="scripts/services/UserService.js"></script>
     <script src="scripts/services/ConnectedUsersService.js"></script>
+    <script src="scripts/services/PlayedGamesService.js"></script>
 
     <script src="scripts/controllers/NavigationController.js"></script>
     <script src="scripts/controllers/IndexController.js"></script>
