End watching init

--- a/public/app/index.html
+++ b/public/app/index.html
@@ -31,6 +31,7 @@
     <script src="scripts/services/UserService.js"></script>
     <script src="scripts/services/PlayedGamesService.js"></script>
     <script src="scripts/services/ChatboxService.js"></script>
+    <script src="scripts/services/WatchService.js"></script>
 
     <script src="scripts/controllers/HomeController.js"></script>
     <script src="scripts/controllers/ViewController.js"></script>
