--- a/public/app/index.html
+++ b/public/app/index.html
@@ -45,6 +45,10 @@
     <script src="scripts/controllers/NewGameController.js"></script>
     <script src="scripts/controllers/GameController.js"></script>
     <script src="scripts/controllers/WatchController.js"></script>
+    <script src="scripts/controllers/LatestGamesController.js"></script>
+
+    <script src="scripts/directives/leaderboard.js"></script>
+    <script src="scripts/directives/latestgames.js"></script>
 
     <script src="scripts/logout.js"></script>
 </head>
@@ -55,7 +59,8 @@
         <div class="alert alert-info" role="alert" ng-show="info">{{info}} <button style="float: right;" ng-click="closeInfo()">Close</button></div>
         <div class="contentDiv" ng-controller="IndexController">
             <div class="gameDiv" ng-controller="ViewController" ng-view></div>
-            <div class="leaderboardDiv" ng-include="'views/leaderboard.html'"></div>
+            <my-leaderboard players="players"></my-leaderboard>
+            <my-latest-games></my-latest-games>
         </div>
         <div class="chatDiv" ng-include="'views/chatbox.html'"></div>
     </div>
