--- a/public/app/index.html
+++ b/public/app/index.html
@@ -29,6 +29,7 @@
     <!--filters-->
     <script src="scripts/filters/offsetfilter.js"></script>
     <script src="scripts/filters/playerfilter.js"></script>
+    <script src="scripts/filters/opengamesonlyfilter.js"></script>
     <!--services-->
     <script src="scripts/services/SocketFactory.js"></script>
     <script src="scripts/services/LobbyService.js"></script>
