--- a/public/app/index.html
+++ b/public/app/index.html
@@ -18,6 +18,8 @@
     <script src="scripts/vendor/bootstrap/bootstrap.js"></script>
     <script src="scripts/vendor/angular/angular.min.js"></script>
     <script src="scripts/vendor/angular/angular-route.min.js"></script>
+    <script src="scripts/vendor/angular/angular-animate.js"></script>
+    <script src="scripts/vendor/angular/angular-messages.js"></script>
     <script src="scripts/vendor/angular/ui-bootstrap-tpls-0.13.3.min.js"></script>
     <script src="scripts/vendor/sockjs/socks-0.3.4.js"></script>
     <script src="scripts/vendor/stompjs/stomp.js"></script>
