--- a/public/app/index.html
+++ b/public/app/index.html
@@ -79,6 +79,7 @@
             <div class="leaderboardDiv" ng-controller="LeaderBoardController">
                 <h3>Leaderboards</h3>
                 <label>Search for player: </label>
+
                 <input ng-model="searchText" type="text">
                 <pagination total-items="(players | filter:{name:searchText}).length" items-per-page="itemsPerPage" ng-model="currentPage" max-size="maxSize" class="pagination-sm" boundary-links="true"></pagination>
                 <table class="table table-striped">
@@ -89,6 +90,7 @@
                     </tr>
                     </thead>
                     <tbody>
+                    <!--TODO: -->
                     <tr ng-repeat="player in players | filter:{name:searchText} | orderBy:'-points' | offset: (currentPage-1)*itemsPerPage | limitTo: itemsPerPage">
                         <td>{{player.name}}</td>
                         <td>{{player.points}}</td>
@@ -119,7 +121,7 @@
             </div>
         </div>
         <!--TODO: maak directives van de chatbox, chatterslist en de chatters-->
-        <div class="chatDiv">
+        <div class="chatDiv" ng-controller = "ChatboxController">
             <div id="chatbox">
                 <aside>
                     <div id="usersHeader">Users</div>
