--- a/public/app/index.html
+++ b/public/app/index.html
@@ -78,10 +78,9 @@
             <!--TODO: maak directives van het leaderbord en de latest games-->
             <div class="leaderboardDiv" ng-controller="LeaderBoardController">
                 <h3>Leaderboards</h3>
-                <label>Search for player: </label>
-
-                <input ng-model="searchText" type="text">
-                <pagination total-items="(players | filter:{name:searchText}).length" items-per-page="itemsPerPage" ng-model="currentPage" max-size="maxSize" class="pagination-sm" boundary-links="true"></pagination>
+                <!--TODO: Maak een textinput waar kan aangegeven worden op welke spelers gefilterd moet worden in het leaderbord, en link aan model 'searchText'-->
+                <!--TODO: filter het leaderbord inline op basis van de searchText zodat enkel de overeenkomstige players mee in rekening gebracht worden voor het totale aantal items in de paginatie -->
+                <pagination total-items="players.length" items-per-page="itemsPerPage" ng-model="currentPage" max-size="maxSize" class="pagination-sm" boundary-links="true"></pagination>
                 <table class="table table-striped">
                     <thead>
                     <tr>
@@ -90,8 +89,8 @@
                     </tr>
                     </thead>
                     <tbody>
-                    <!--TODO: -->
-                    <tr ng-repeat="player in players | filter:{name:searchText} | orderBy:'-points' | offset: (currentPage-1)*itemsPerPage | limitTo: itemsPerPage">
+                    <!--TODO: filter het leaderbord inline op basis van de searchText zodat enkel de overeenkomstige players getoond worden -->
+                    <tr ng-repeat="player in players | orderBy:'-points' | offset: (currentPage-1)*itemsPerPage | limitTo: itemsPerPage">
                         <td>{{player.name}}</td>
                         <td>{{player.points}}</td>
                     </tr>
